<resources>
    <string name="app_name">Tykhe</string>
    <string name="appVersion"> Tykhe v 1.0 </string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start"> Start </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="welcome_termsandservice"> Check out out <u>Terms of Service</u> </string>
    <string name="welcome_button"> BEGIN </string>
    <string name="nextUppercase"> NEXT </string>


    <string name="weekly"> Weekly </string>
    <string name="biWeekly"> Biweekly </string>
    <string name="monthly"> Monthly </string>

    <string name="setup_account_title">Create profile</string>
    <string name="name"> Name * </string>
    <string name="age"> Age </string>

    <string name="setup_savings_title">Set your savings</string>
    <string name="setup_savings_saving_rate"> Saving rate </string>
    <string name="setup_savings_monthly_contributions"> Monthly contributions * </string>
    <string name="setup_savings_zero">0.00</string>

    <string name="setup_savings_suggested_25">$25</string>
    <string name="setup_savings_suggested_75">$75</string>
    <string name="setup_savings_suggested_125">$125</string>

    <string name="setup_savings_suggested_150">$150</string>
    <string name="setup_savings_suggested_225">$225</string>
    <string name="setup_savings_suggested_500">$500</string>

    <string name="setup_savings_suggested_2000">$2000</string>
    <string name="setup_savings_suggested_4000">$4000</string>
    <string name="setup_savings_suggested_10000">$10000</string>

    <string name="suggested"> Suggested: </string>
    <string name="setup_annual_interest_rate">Annual interest rate *</string>
    <string name="setup_length_of_investment">How long do you plan to save?</string>
    <string name="setup_current_savings">What are your current savings?</string>

    <string name="settings_title"> Settings </string>
    <string name="settings_savings_item"> Savings </string>
    <string name="settings_saving_item_desc">Edit your savings preferences</string>
    <string name="settings_profile_item"> Profile </string>
    <string name="settings_profile_item_desc"> Edit name and age </string>

    <string name="settings_terms_of_service">Terms of Service</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_contact_us">Contact Us</string>

    <string name="settings_account_update_title">Edit account</string>
    <string name="settings_savings_update_title">Edit savings</string>

    <string name="settings_update">Save changes</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="reminder_title"> Reminder </string>
    <string name="reminders_saving_type_title">Saving rate: </string>

    <string name="reminders_weekly_biweekly_title">Repeat</string>

    <string name="reminders_s">S</string>
    <string name="reminders_m">M</string>
    <string name="reminders_t">T</string>
    <string name="reminders_W">W</string>
    <string name="reminders_f">F</string>
    <string name="reminder_notification_msg">Please make sure to mark your saving reminder as \'completed\' for today if you wish to create a new one</string>

    <string name="reminders_monthly_selection_title">Day of the month</string>

    <string name="reminders_time_choosing_title">Choose time</string>

    <string name="reminders_savings_reminder">Saving reminder</string>

    <string name="reminders_save_changes_btn">SAVE CHANGES</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home_screen_current_savings">Current Savings</string>
    <string name="home_screen_growth"> Wealth growth rate </string>
    <string name="home_screen_age">By age</string>
    <string name="home_screen_total_savings"> Estimated savings </string>

    <string name="home_screen_saving_items"> Saving history </string>
    <string name="home_screen_saving_items_no_items"> No saving history </string>

    <string name="home_screen_saving_item_btn_complete"> COMPLETE  </string>
    <string name="home_screen_saving_item_btn_uncomplete"> UNCOMPLETE </string>
    <string name="home_screen_saving_item_btn_overdue"> OVERDUE </string>


    <string name="notification_title">Time to save</string>
    <string name="notification_text">Open Tykhe to start saving!</string>


    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_link_text">Click here to view the privacy policy.</string>

    <string name="terms_of_service_title">Terms of Service</string>
    <string name="terms_of_service_link_text">Click here to view the terms of service.</string>

    <string name="contact_us_title">Contact Us</string>
    <string name="contact_us_email_title">Our email address!</string>
    <string name="contact_us_email">boraniev@outlook.com</string>
    <string name="or_send_us_an_email"> Or send us an email! </string>
    <string name="send_email"> Send email </string>
</resources>